# simple-android-gl

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/simpleandroidgl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  simpleandroidgl.cpp  simpleandroidvulkan.cpp  vkapplication.cpp  vkapplication.h
app/src/main/cpp/infra/: CMakeLists.txt  camera.h  fp.h  glb.cpp  glb.h  matrix.h  misc.cpp  misc.h  quaternion.h  scene.cpp  scene.h  vector.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: common.glsl  indirectdraw_test.frag  indirectdraw_test.vert  test.frag  test.vert  texture.frag  texture.vert
app/src/test/java/com/example/simpleandroidgl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
